feat(mcp-db): Phase E — cache deletion + direct DB reads
- McpToolConfigAccessor: remove Caffeine cache, direct indexed DB reads
- McpToolAdminService: remove toolListCache, callbackProvider, invalidate;
  simplify to direct mapper queries
- McpServerAdminService: remove all invalidate calls
- refreshTools delegates to reconnect (reconciler handles catalog sync)
- Tests updated for direct-read semantics